--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-purgecss": "^4.1.1",
     "gulp-sass": "^5.0.0",
+    "purgecss": "^4.1.1",
+    "purify-css": "^1.2.5",
     "sass": "^1.43.5"
+  },
+  "dependencies": {
+    "gulp-cli": "^2.3.0",
+    "gulp-purify-css": "^0.1.0",
+    "gulp-purifycss": "^0.2.0"
   }
 }
