--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "manage-landing-page",
-  "description": "![Design preview for the Manage landing page coding challenge](./design/desktop-preview.jpg)",
+  "name": "example",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,15 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-purgecss": "^4.1.1",
+    "gulp-purgecss": "^4.1.3",
     "gulp-sass": "^5.0.0",
-    "purgecss": "^4.1.1",
-    "purify-css": "^1.2.5",
-    "sass": "^1.43.5"
-  },
-  "dependencies": {
-    "gulp-cli": "^2.3.0",
-    "gulp-purify-css": "^0.1.0",
-    "gulp-purifycss": "^0.2.0"
+    "sass": "^1.44.0"
   }
 }
